# vdc-logger

./: .gitignore  Caddyfile  README.md  config.py  influx.py  install.sh  production_script.sh  pyproject.toml  redislistener.py  requirements.txt
logger/: __init__.py  config.py  dashboard.py  db.py  exceptions.py  helpers.py  logging.py  model.py  my_project.py  utils.py
services/: tf-caddy-server.service  tf-logging-server.service  tf-redis-listener.service
